[package]
name = "widgetry"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["glow-backend"]
glow-backend = ["glow", "glutin", "usvg/text"]
wasm-backend = ["glow", "instant/wasm-bindgen", "wasm-bindgen", "web-sys", "winit/web-sys"]

[dependencies]
abstutil = { path = "../abstutil" }
# backtrace = "0.3.40"
downcast-rs = "1.1.1"
geom = { path = "../geom" }
glow = { version = "0.5.0", optional = true }
glutin = { version = "0.24.1", optional = true }
htmlescape = "0.3.1"
image = { version = "0.23.4", default-features = false, features=["png"] }
instant = "0.1.2"
log = "0.4"
lru = "0.4.3"
lyon = "0.15.8"
serde = "1.0.110"
stretch = "0.3.2"
ttf-parser = "0.6.1"
usvg = { git = "https://github.com/RazrFalcon/resvg", default-features=false }
wasm-bindgen = { version = "0.2.68", optional = true }
web-sys = { version = "0.3.45", optional = true }
winit = "0.22.2"

[dev-dependencies]
rand = "0.7.0"
rand_xorshift = "0.2.0"
svg_face = "0.1.2"
